RESOLVED FIXED106124
[BlackBerry] Last text input caret left visible when WebView entirely loses focus.
https://bugs.webkit.org/show_bug.cgi?id=106124
Summary [BlackBerry] Last text input caret left visible when WebView entirely loses f...
Mike Lattanzio
Reported 2013-01-04 12:25:42 PST
If editing text and the WebView loses focus as a whole, the last text input caret can be left visible. Ensure it's removed just as though the focus had moved to another node.
Attachments
Patch (1.81 KB, patch)
2013-01-04 12:28 PST, Mike Lattanzio
no flags
Patch (1.86 KB, patch)
2013-01-04 12:37 PST, Mike Lattanzio
no flags
Mike Lattanzio
Comment 1 2013-01-04 12:28:48 PST
Mike Lattanzio
Comment 2 2013-01-04 12:37:40 PST
WebKit Review Bot
Comment 3 2013-01-04 13:50:09 PST
Comment on attachment 181360 [details] Patch Clearing flags on attachment: 181360 Committed r138853: <http://trac.webkit.org/changeset/138853>
WebKit Review Bot
Comment 4 2013-01-04 13:50:12 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.