[BlackBerry] Last text input caret left visible when WebView entirely loses focus. https://bugs.webkit.org/show_bug.cgi?id=106124

Patch by Mike Lattanzio <mlattanzio@rim.com> on 2013-01-04
Reviewed by George Staikos.

Internal PR 248834

There are numerous code paths that lead to repainting of the focus node
when the focus moves to another node, but none seem to cover the case
of focus leaving the document when there are no DocumentMarkers present.

* WebKitSupport/InputHandler.cpp:
(BlackBerry::WebKit::InputHandler::setElementUnfocused):

Canonical link: https://commits.webkit.org/124326@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138853 268f45cc-cd09-0410-ab3c-d52691b4dbfc